--- a/src/gtk-3.0/scss/widgets/_button.scss
+++ b/src/gtk-3.0/scss/widgets/_button.scss
@@ -128,7 +128,7 @@
 
     @extend %button;
     @include linear-gradient($button_bg);
-    @include border(rgba(0, 0, 0, .12 + $border_strength));
+    @include custom_border($button_border_color);
 
     color: $fg;
     box-shadow: 0 1px 2px -1px alpha($dark_shadow, .12 + $shadow_strength);
