--- a/src/gtk-3.0/scss/widgets/_entry.scss
+++ b/src/gtk-3.0/scss/widgets/_entry.scss
@@ -62,7 +62,7 @@
 @mixin entry($bg, $fg) {
     @extend %entry;
     @include linear-gradient($bg, to top);
-    @include border($bg);
+    @include custom_border($text_border_color);
 
     color: $fg;
 
