fix(gtk3.20: view): fix inset/outset/groove/ridge frames

--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -314,7 +314,7 @@
 
 @include exports("frame") {
     frame > border, .frame {
-        border: 1px solid $borders_color;
+        border: 1px solid alpha($borders_color, 0.2);
 
         &.flat { border-style: none; }
 
