fix(gtk3.20: choosers): fix colroswatch button

--- a/src/gtk-3.20/scss/widgets/_choosers.scss
+++ b/src/gtk-3.20/scss/widgets/_choosers.scss
@@ -143,9 +143,7 @@
         padding: $spacing;
 
         colorswatch:only-child {
-            &, overlay { border-radius: 0; }
-
-            @if $variant == 'light' { box-shadow: 0 1px _text_shadow_color(); }
+            &, overlay { border-radius: $roundness; }
         }
 
         @if $variant == 'light' {
