--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -19,7 +19,7 @@ $tooltip_fg_color: #%FG%;
 /*$selected_borders_color: if($variant == 'light', darken($selected_bg_color, 30%), darken($selected_bg_color, 20%));*/
 /*$borders_color: if($variant == 'light', shade($bg_color, .85), shade($bg_color, .88));*/
 $selected_borders_color: if($variant == 'light', mix($selected_bg_color, $fg_color, .3), darken($selected_bg_color, 20%));
-$borders_color: mix($bg_color, $fg_color, .08);
+$borders_color: mix($bg_color, $fg_color, if(lightness($bg_color) < 50%, .18, .10));
 $borders_edge: if($variant == 'light', transparentize(white, 0.2), transparentize($fg_color, 0.93));
 
 // dark colors
