--- a/src/gtk-3.0/scss/_global.scss
+++ b/src/gtk-3.0/scss/_global.scss
@@ -21,8 +21,10 @@ $dark_bg_color: #%MENU_BG%;
 $dark_fg_color: #%MENU_FG%;
 
 // shadows
-$dark_shadow: #000;
-$light_shadow: #fff;
+/*$dark_shadow: #000;*/
+/*$light_shadow: #fff;*/
+$dark_shadow: shade($fg_color, .2);
+$light_shadow: lighten($bg_color, .4);
 
 // caret
 $primary_caret_color: #%CARET1_FG%;
@@ -30,22 +32,24 @@ $secondary_caret_color: #%CARET2_FG%;
 $caret_aspect_ratio: %CARET_SIZE%;
 
 // white and black
-$black: #000;
-$white: #fff;
+//$black: #000;
+//$white: #fff;
+$black: shade($fg_color, .4);
+$white: lighten($bg_color, .55);
 
-// misc colors used by gtk+
-$info_fg_color: #fff;
-$info_bg_color: #03a9f4;
-$warning_fg_color: #fff;
-$warning_bg_color: #ef6c00;
-$question_fg_color: #fff;
-$question_bg_color: #673ab7;
-$error_fg_color: #fff;
-$error_bg_color: #f44336;
 $link_color: #%SEL_BG%;
-$success_color: #4caf50;
-$warning_color: #ef6c00;
-$error_color: #f44336;
+$success_color: #%TERMINAL_COLOR10%;
+$warning_color: #%TERMINAL_COLOR11%;
+$error_color: #%TERMINAL_COLOR9%;
+
+$info_fg_color: #%TERMINAL_BACKGROUND%;
+$info_bg_color: #%TERMINAL_COLOR12%;
+$warning_fg_color: #%TERMINAL_BACKGROUND%;
+$warning_bg_color: $warning_color;
+$question_fg_color: #%TERMINAL_BACKGROUND%;
+$question_bg_color: $info_bg_color;
+$error_fg_color: #%TERMINAL_BACKGROUND%;
+$error_bg_color: $error_color;
 
 $toolbar_bg_color: $bg_color;
 $toolbar_fg_color: $fg_color;
