--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -62,7 +62,8 @@ $switch_bg_color: mix($bg_color, $base_color, .3);
 $switch_fg_color: $text_color;
 $switch_slider_bg_color: mix($text_color, $bg_color, .5);
 
-$link_color: #%SEL_BG%;
+//$link_color: mix($selected_bg_color, $fg_color, .3);
+$link_color: #%TERMINAL_COLOR4%;
 $success_color: #%TERMINAL_COLOR10%;
 $warning_color: #%TERMINAL_COLOR11%;
 $error_color: #%TERMINAL_COLOR9%;
