--- a/src/gtk-3.20/scss/widgets/_choosers.scss
+++ b/src/gtk-3.20/scss/widgets/_choosers.scss
@@ -146,11 +146,10 @@
             &, overlay { border-radius: $roundness; }
         }
 
-        @if $variant == 'light' {
-            &:disabled,
-            &:backdrop,
-            &:active,
-            &:checked { colorswatch:only-child { box-shadow: none; } }
+        &:disabled, &:backdrop, &:active, &:checked {
+            colorswatch:only-child {
+                box-shadow: none;
+            }
         }
     }
 }
