--- a/src/gtk-3.20/scss/widgets/_osd.scss
+++ b/src/gtk-3.20/scss/widgets/_osd.scss
@@ -13,7 +13,7 @@
     button.color {
         .osd colorswatch:only-child { box-shadow: none; }
 
-        @if $variant == 'light' {
+        @if $variant == "light" {
             .osd & {
                 &:disabled,
                 &:backdrop,
