--- a/src/gtk-3.20/scss/widgets/_progress.scss
+++ b/src/gtk-3.20/scss/widgets/_progress.scss
@@ -311,7 +311,7 @@
             highlight, fill { margin: 0; }
 
             &.horizontal {
-                padding: 0 0 6px 0;
+                padding: 0 0 6px;
 
                 trough {
                     border-top-left-radius: 0;
