--- a/src/gtk-3.20/scss/_functions.scss
+++ b/src/gtk-3.20/scss/_functions.scss
@@ -88,8 +88,8 @@ $modules: () !default;
     $_lbg: lightness($bg) / 100%;
 
     @if lightness($tc) < 50% {
-        @return transparentize(white, 1 - $_lbg / ($_lbg * 1.3));
+        @return transparentize($white, 1 - $_lbg / ($_lbg * 1.3));
     } @else {
-        @return transparentize(black, $_lbg * .8);
+        @return transparentize($black, $_lbg * .8);
     }
 }
