--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -4,7 +4,7 @@
 
 @include exports("button_extends") {
     // stuff for .needs-attention
-    $_dot_color: if($variant == 'light', $selected_bg_color, lighten($selected_bg_color, .15));
+    $_dot_color: if($variant == "light", $selected_bg_color, lighten($selected_bg_color, .15));
 
     @keyframes needs_attention {
         from {
@@ -19,13 +19,13 @@
     %needs_attention {
         animation: needs_attention 150ms ease-in;
         $_dot_shadow: _text_shadow_color();
-        $_dot_shadow_r: if($variant == 'light', .5, .45);
+        $_dot_shadow_r: if($variant == "light", .5, .45);
         background-image: -gtk-gradient(radial, center center, 0, center center, .5, to($_dot_color), to(transparent)),
                           -gtk-gradient(radial, center center, 0, center center, $_dot_shadow_r, to($_dot_shadow), to(transparent));
         background-size: 6px 6px, 6px 6px;
         background-repeat: no-repeat;
 
-        @if $variant == 'light' {
+        @if $variant == "light" {
             background-position: right 3px, right 4px;
         } @else {
             background-position: right 3px, right 2px;
@@ -34,7 +34,7 @@
         &:backdrop { background-size: 6px 6px, 0 0; }
 
         &:dir(rtl) {
-            @if $variant == 'light' {
+            @if $variant == "light" {
                 background-position: left 3px, left 4px;
             } @else {
                 background-position: left 3px, left 2px;
@@ -294,9 +294,9 @@
 
     &, &.flat {
 
-		&:hover {
+        &:hover {
             @include linear-gradient(shade($bg, 1.05));
-            @include border(alpha($fg, .20 + $border_strength));
+            @include border(alpha($fg, .2 + $border_strength));
 
             color: $fg;
             box-shadow: 0 1px 2px -1px alpha($dark_shadow, .22 + $shadow_strength);
@@ -304,28 +304,29 @@
 
         &:focus {
             @include linear-gradient(shade($bg, 1.05));
-            @include border(alpha($fg, .20 + $border_strength));
+            @include border(alpha($fg, .2 + $border_strength));
 
             color: $fg;
             box-shadow: 0 1px 2px -1px alpha($dark_shadow, .32 + $shadow_strength);
-			&:hover {
-				@include linear-gradient(shade($bg, 1.1));
-				@include border(alpha($fg, .20 + $border_strength));
 
-				box-shadow: 0 1px 2px -1px alpha($dark_shadow, .38 + $shadow_strength);
-			}
+            &:hover {
+                @include linear-gradient(shade($bg, 1.1));
+                @include border(alpha($fg, .2 + $border_strength));
+
+                box-shadow: 0 1px 2px -1px alpha($dark_shadow, .38 + $shadow_strength);
+            }
         }
 
         &:checked, &:active {
             /*@include linear-gradient(shade($bg, .7), to top);*/
             @include linear-gradient($selected_bg_color, to top);
+            @include border(alpha($fg, .12 + $border_strength));
 
             color: $selected_fg_color;
             box-shadow: inset 1px 0 alpha($fg, .06),
             inset  0 1px alpha($fg, .07),
             inset -1px 0 alpha($fg, .06),
             inset 0 -1px alpha($fg, .05);
-            @include border(alpha($fg, .12 + $border_strength));
 
             &:focus, &:hover {
                 /*@include linear-gradient(shade($bg, .65), to top);*/
@@ -431,7 +432,7 @@
             /*@include border($base_color);*/
 
             padding: 0;
-			border-radius: $roundness;
+            border-radius: $roundness;
 
             color: $text_color;
             caret-color: $text_color;
@@ -458,17 +459,17 @@
                 background-image: none;
                 box-shadow: none;
 
-		/*
+                /*
                 @if (lightness($bg_color) > 50) {
                     background-color: shade($bg_color, 1.08);
                 }
 
-                &:hover { 
+                &:hover {
                     @if (lightness($bg_color) > 50) {
                         background-color: shade($bg_color, 1.11);
-                    } 
+                    }
                 }
-		*/
+                */
 
                 &:dir(rtl) { border-style: none solid none none; }
 
@@ -503,12 +504,12 @@
 
             button {
                 &.up {
-                    border-style: solid solid none solid;
+                    border-style: solid solid none;
                     border-radius: $roundness $roundness 0 0;
                 }
 
                 &.down {
-                    border-style: none solid solid solid;
+                    border-style: none solid solid;
                     border-radius: 0 0 $roundness $roundness;
                 }
             }
@@ -530,7 +531,7 @@
         }
 
         arrow {
-            -gtk-icon-source: -gtk-icontheme('pan-down-symbolic');
+            -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
             min-height: 16px;
             min-width: 16px;
         }
