--- a/src/gtk-3.20/scss/widgets/_misc.scss
+++ b/src/gtk-3.20/scss/widgets/_misc.scss
@@ -104,13 +104,13 @@
         arrow {
             min-width: 16px;
             min-height: 16px;
-            -gtk-icon-source: -gtk-icontheme('pan-end-symbolic');
+            -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
 
-            &:dir(rtl) { -gtk-icon-source: -gtk-icontheme('pan-end-symbolic-rtl'); }
+            &:dir(rtl) { -gtk-icon-source: -gtk-icontheme("pan-end-symbolic-rtl"); }
 
             &:hover { color: alpha(currentColor, .8); } //only lightens the arrow
 
-            &:checked { -gtk-icon-source: -gtk-icontheme('pan-down-symbolic'); }
+            &:checked { -gtk-icon-source: -gtk-icontheme("pan-down-symbolic"); }
         }
     }
 }
@@ -265,9 +265,9 @@
         color: $fg_color;
         background-color: $base_color;
         border: 1px solid;
-        border-color: if($variant == 'light', mix($borders_color, $bg_color, .5), $borders_color);
+        border-color: if($variant == "light", mix($borders_color, $bg_color, .5), $borders_color);
         border-radius: $roundness;
-        box-shadow: if($variant == 'light', inset 0 -3px mix($base_color, $bg_color, .2), inset 0 -3px mix($borders_color, $base_color, .6));
+        box-shadow: if($variant == "light", inset 0 -3px mix($base_color, $bg_color, .2), inset 0 -3px mix($borders_color, $base_color, .6));
         font-size: smaller;
 
         &:backdrop {
@@ -307,7 +307,7 @@
         @at-root %nobg_selected_items, & {
             color: $selected_fg_color;
 
-            @if $variant == 'light' { outline-color: transparentize($selected_fg_color, .7); }
+            @if $variant == "light" { outline-color: transparentize($selected_fg_color, .7); }
 
             &:disabled { color: mix($selected_fg_color, $selected_bg_color, .5); }
 
