--- a/src/gtk-3.20/scss/widgets/_toggle.scss
+++ b/src/gtk-3.20/scss/widgets/_toggle.scss
@@ -69,14 +69,14 @@ $suffix: if($variant == "dark", "-dark", "");
     }
 
     //selection-mode
-    @each $s,$as in ('', '-unchecked'),
-                  (':hover', '-unchecked'),
-                  (':active', '-checked'),
-                  (':backdrop', '-unchecked'),
-                  (':checked', '-checked'),
-                  (':checked:hover', '-checked'),
-                  (':checked:active', '-checked'),
-                  (':backdrop:checked', '-checked') {
+    @each $s,$as in ("", "-unchecked"),
+                  (":hover", "-unchecked"),
+                  (":active", "-checked"),
+                  (":backdrop", "-unchecked"),
+                  (":checked", "-checked"),
+                  (":checked:hover", "-checked"),
+                  (":checked:active", "-checked"),
+                  (":backdrop:checked", "-checked") {
         .view.content-view.check#{$s}:not(list) {
             -gtk-icon-shadow: none;
             -gtk-icon-source: url("../assets/grid-selection#{$as}#{$suffix}.svg");
@@ -94,7 +94,7 @@ $suffix: if($variant == "dark", "-dark", "");
     switch {
         border-radius: $roundness;
         padding: $spacing - 1px;
-        border: none;
+        border: 0;
         outline: none;
         transition: background-color .3s linear;
         min-width: 88px;
@@ -105,7 +105,7 @@ $suffix: if($variant == "dark", "-dark", "");
 
         slider {
             background-color: $switch_slider_bg_color;
-            transition: all 0.3s ease-in;
+            transition: all .3s ease-in;
             box-shadow: 0 1px 2px 0 alpha($dark_shadow, .07), 1px 0 2px 0 alpha($dark_shadow, .07);
             border-radius: $roundness;
         }
