--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -16,11 +16,11 @@ $selected_fg_color: #%SEL_FG%;
 $tooltip_bg_color: #%BG%;
 $tooltip_fg_color: #%FG%;
 
-/*$selected_borders_color: if($variant == 'light', darken($selected_bg_color, 30%), darken($selected_bg_color, 20%));*/
-/*$borders_color: if($variant == 'light', shade($bg_color, .85), shade($bg_color, .88));*/
-$selected_borders_color: if($variant == 'light', mix($selected_bg_color, $fg_color, .3), darken($selected_bg_color, 20%));
-$borders_color: mix($bg_color, $fg_color, if(lightness($bg_color) < 50%, .18, .10));
-$borders_edge: if($variant == 'light', transparentize(white, 0.2), transparentize($fg_color, 0.93));
+// white and black
+//$black: #000;
+//$white: #fff;
+$black: shade($fg_color, .4);
+$white: lighten($bg_color, .55);
 
 // dark colors
 $dark_bg_color: #%MENU_BG%;
@@ -32,20 +32,20 @@ $dark_fg_color: #%MENU_FG%;
 $dark_shadow: shade($fg_color, .2);
 $light_shadow: lighten($bg_color, .4);
 
+/*$selected_borders_color: if($variant == 'light', darken($selected_bg_color, 30%), darken($selected_bg_color, 20%));*/
+/*$borders_color: if($variant == 'light', shade($bg_color, .85), shade($bg_color, .88));*/
+$selected_borders_color: if($variant == 'light', mix($selected_bg_color, $fg_color, .3), darken($selected_bg_color, 20%));
+$borders_color: mix($bg_color, $fg_color, if(lightness($bg_color) < 50%, .18, .1));
+$borders_edge: if($variant == 'light', transparentize($white, .2), transparentize($fg_color, .93));
+
 // caret
 $primary_caret_color: #%CARET1_FG%;
 $secondary_caret_color: #%CARET2_FG%;
 $caret_aspect_ratio: %CARET_SIZE%;
 
-// white and black
-//$black: #000;
-//$white: #fff;
-$black: shade($fg_color, .4);
-$white: lighten($bg_color, .55);
-
 /*$button_border_strength: if(lightness($bg) > 50, 0, .1);*/
 /*$button_shadow_strength: if(lightness($bg) > 50, 0, .1);*/
-$button_border_strength: 0.1;
+$button_border_strength: .1;
 $button_border: alpha($button_fg_color, .06 + $button_border_strength);
 $entry_border: $borders_color;
 
