--- a/src/gtk-3.20/scss/apps/_lightdm.scss
+++ b/src/gtk-3.20/scss/apps/_lightdm.scss
@@ -6,7 +6,7 @@
     #panel_window {
         background-color: $lightdm_bg_color;
         background-image: none;
-        color: $white;
+        color: $lightdm_fg_color;
         font-weight: bold;
         text-shadow: 0 1px alpha($black, .5);
         -gtk-icon-shadow: 0 1px alpha($black, .5);
@@ -18,19 +18,19 @@
                 background-color: transparent;
                 background-image: none;
                 border-style: none;
-                color: $white;
+                color: $lightdm_fg_color;
                 text-shadow: 0 1px alpha($black, .5);
                 -gtk-icon-shadow: 0 1px alpha($black, .5);
 
                 &:hover {
-                    background-color: alpha($white, .2);
+                    background-color: alpha($lightdm_fg_color, .2);
                     background-image: none;
-                    color: $white;
+                    color: $lightdm_fg_color;
                 }
 
-                *:hover { color: $white; }
+                *:hover { color: $lightdm_fg_color; }
 
-                &:disabled { color: alpha($white, .7); }
+                &:disabled { color: alpha($lightdm_fg_color, .7); }
             }
 
             menu > menuitem { font-weight: normal; }
@@ -56,7 +56,7 @@
     #login_window {
         menu { border-radius: 0; }
 
-        button { @include button($lightdm_bg_color, $lightdm_fg_color); }
+        button { @include button($lightdm_button_bg_color, $lightdm_button_fg_color); }
 
         entry { @include entry($lightdm_bg_color, $lightdm_fg_color); }
     }
